previous code was correct, but made it more maintanable and readable based on the solution

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,8 +14,8 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   padding: 8px;
-  align-items: center;
-  flex: auto;
+  justify-content: space-between;
+  /* flex: auto; remove*/
 }
 
 .profile-image {
@@ -24,10 +24,10 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-  display: flex;
-  margin-left: 16px;
 
-  /* border: 2px solid black; */
+  /* display: flex; remove*/
+  /* margin-left: 16px; remove*/
+  /* border: 2px solid black; debugging */
 }
 
 .logo {
@@ -35,8 +35,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  display: flex;
-  margin-right: 18px;
+
+  /* display: flex; remove*/
+  /* margin-right: 18px; remove */
 }
 
 button {
@@ -45,16 +46,19 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  margin-left:auto;
 
-  /* border: 2px solid black; */
+
+
+  /* margin-left:auto;  remove */
+  /* border: 2px solid black; debugging */
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  /* border: 2px solid black; */
+
+  /* border: 2px solid black; debugging */
 }
 
 ul {
@@ -63,7 +67,16 @@ ul {
   padding: 0;
   margin: 0;
   gap: 16px;
-  flex-direction: flex-start;
 
-  /* border: 2px solid black; */
+  /* flex-direction: flex-start;  remove */
+  /* border: 2px solid black; debugging */
 }
+
+
+.left,
+.right {
+  gap: 16px;
+  align-items: center;
+  display: flex;
+  
+} 
